src/core/Mail/Mail.css
.app {
  width: 100%;
  height: 100%;
  display: flex;
  flex-flow: column nowrap;
  position: relative;
}

.app > * {
  width: 100%;
}

.topbar {
  height: 40px;
  display: flex;
  justify-content: center;
  gap: 32px;
}

.topbar > * {
  height: 100%;
  width: 10%;
}

.mail-list-container {
  flex: 1;
  display: flex;
  flex-flow: column nowrap;
}

.mail-list-container .box-title {
  height: max-content;
  text-align: center;
  font-weight: bolder;
}

.mail-list-container .mail-list {
  flex: 1;
}

.topbar .selected {
  color: blue;
}

.compose-btn {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 8px;
  width: 80px;
  height: 80px;
  font-weight: bold;
}

.compose-close-btn {
  position: absolute;
  top: 0;
  right: 0;
  margin: 5px;
  color: red;
  border-radius: 3px;
}

.compose {
  position: absolute;
  bottom: 85px;
  right: 0;
  margin: 12px;
  width: 50%;
  height: 40%;
  background-color: #eee;
  padding: 20px;
  border-radius: 12px;
}

.compose input, .compose button, .compose textarea {
  border: none;
  border: 1px solid grey;
  border-radius: 12px;
  padding: 8px;
}

.compose textarea {
  resize: none;
  width: 100%;
  height: 70%;
}

.compose-send-btn {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 12px;
  width: 80px;
  height: 25px;
  font-weight: bold;
}

.mail {}

